--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ env:
   ELASTICSEARCH_HOST: localhost
   ELASTICSEARCH_URL: http://localhost
   APARTMENT_INDEX_NAME: test-apartment
-  PDFTOTEXT_VERSION: '0.86.1'
+  PDFTOTEXT_VERSION: '0.86.1-0ubuntu1'
   PUBLIC_PGP_KEY: |
     -----BEGIN PGP PUBLIC KEY BLOCK-----
 
@@ -160,7 +160,7 @@ jobs:
         run: sudo apt-get install libpq-dev
 
       - name: Install poppler-utils for pdftotext  # used in tests
-        run: sudo apt-get install poppler-utils
+        run: sudo apt-get install poppler-utils=${{env.PDFTOTEXT_VERSION}}
 
       - name: Install dependencies
         run: |
