--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ env:
   ELASTICSEARCH_HOST: localhost
   ELASTICSEARCH_URL: http://localhost
   APARTMENT_INDEX_NAME: test-apartment
-  PDFTOTEXT_VERSION: '0.86.1-0ubuntu1'
+  # poppler-utils package contains the pdftotext-program that is used in some tests
+  # newer versions of the program parse PDF's differently causing the tests to fail
+  POPPLER_UTILS_VERSION: '0.86.1-0ubuntu1.5'
   PUBLIC_PGP_KEY: |
     -----BEGIN PGP PUBLIC KEY BLOCK-----
 
@@ -160,7 +162,7 @@ jobs:
         run: sudo apt-get install libpq-dev
 
       - name: Install poppler-utils for pdftotext  # used in tests
-        run: sudo apt-get install poppler-utils=${{env.PDFTOTEXT_VERSION}}
+        run: sudo apt-get install poppler-utils=${{env.POPPLER_UTILS_VERSION}}
 
       - name: Install dependencies
         run: |
