--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,11 @@ services:
         build:
             context: .
             target: development
+            args:
+                OIKOTIE_SCHEMA_DIR: ${OIKOTIE_SCHEMA_DIR}
+                OIKOTIE_APARTMENTS_BATCH_SCHEMA_URL: ${OIKOTIE_APARTMENTS_BATCH_SCHEMA_URL}
+                OIKOTIE_APARTMENTS_UPDATE_SCHEMA_URL: ${OIKOTIE_APARTMENTS_UPDATE_SCHEMA_URL}
+                OIKOTIE_HOUSINGCOMPANIES_BATCH_SCHEMA_URL: ${OIKOTIE_HOUSINGCOMPANIES_BATCH_SCHEMA_URL}
         env_file:
             - .env
         environment:
