--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,10 @@ OIKOTIE_ENTRYPOINT=
 OIKOTIE_FTP_HOST=
 OIKOTIE_USER=
 OIKOTIE_PASSWORD=
+OIKOTIE_SCHEMA_DIR=
+OIKOTIE_APARTMENTS_BATCH_SCHEMA=
+OIKOTIE_APARTMENTS_UPDATE_SCHEMA=
+OIKOTIE_HOUSINGCOMPANIES_BATCH_SCHEMA=
 
 LOG_LEVEL=ERROR
 DJANGO_LOG_LEVEL=ERROR
