--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ env:
   SECRET_KEY: topsecret123
   DATABASE_URL: postgres://postgres:postgres@localhost/apartment-application
   OIKOTIE_VENDOR_ID: test
+  OIKOTIE_SCHEMA_DIR: integration_schemas
   ELASTICSEARCH_VERSION: '7.9.1'
   ELASTICSEARCH_HOST: localhost
   ELASTICSEARCH_URL: http://localhost
