Add more env vars for tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ env:
   DATABASE_URL: postgres://postgres:postgres@localhost/apartment-application
   OIKOTIE_VENDOR_ID: test
   OIKOTIE_SCHEMA_DIR: integration_schemas
+  OIKOTIE_APARTMENTS_BATCH_SCHEMA_URL: "foo.bar/oikotie-apartments-batch.rng"
+  OIKOTIE_APARTMENTS_UPDATE_SCHEMA_URL: "foo.bar/oikotie-apartments-update.rng"
+  OIKOTIE_HOUSINGCOMPANIES_BATCH_SCHEMA_URL: "foo.bar/oikotie-housingcompanies-batch.rng"
+
   ELASTICSEARCH_VERSION: '7.9.1'
   ELASTICSEARCH_HOST: localhost
   ELASTICSEARCH_URL: http://localhost
