--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,8 @@ django-cors-headers
 django-enumfields
 django-environ
 django-etuovi
-django-oikotie
+# temporary
+git+https://github.com/City-of-Helsinki/django-oikotie.git@schema-validation
 django-helusers==0.13.0
 git+https://github.com/incuna/django-pgcrypto-fields@5b4b8eed3f9636ba3331f26e41a639fe4bee9247#egg=django-pgcrypto-fields
 django-simple-history
