--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@
 #
 asgiref==3.7.2
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   django
 astroid==2.15.8
     # via pylint
@@ -16,7 +16,7 @@ backcall==0.2.0
     # via ipython
 backports-zoneinfo==0.2.1
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   django
 black==22.3.0
     # via -r requirements-dev.in
@@ -42,7 +42,7 @@ distlib==0.3.7
     # via virtualenv
 django==4.2.7
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   django-extensions
 django-extensions==3.2.3
     # via -r requirements-dev.in
@@ -56,7 +56,7 @@ factory-boy==3.3.0
     # via -r requirements-dev.in
 faker==8.6.0
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   factory-boy
 filelock==3.12.4
     # via virtualenv
@@ -96,7 +96,7 @@ nodeenv==1.8.0
     # via pre-commit
 packaging==23.2
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   build
     #   pytest
     #   pytest-sugar
@@ -158,22 +158,22 @@ pytest-sugar==0.9.7
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   -r requirements-dev.in
     #   faker
     #   freezegun
 pyyaml==6.0.1
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   pre-commit
 six==1.16.0
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   asttokens
     #   python-dateutil
 sqlparse==0.4.4
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   django
 stack-data==0.6.3
     # via ipython
@@ -181,7 +181,7 @@ termcolor==2.3.0
     # via pytest-sugar
 text-unidecode==1.3
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   faker
 tomli==2.0.1
     # via
@@ -201,7 +201,7 @@ traitlets==5.11.2
     #   matplotlib-inline
 typing-extensions==4.8.0
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   asgiref
     #   astroid
     #   black
@@ -218,7 +218,7 @@ wrapt==1.15.0
     # via astroid
 zipp==3.20.2
     # via
-    #   -c requirements.txt
+    #   -c /app/requirements.txt
     #   importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
