--- a/requirements.in
+++ b/requirements.in
@@ -4,7 +4,7 @@ django-enumfields
 django-environ
 django-etuovi
 # temporary
-git+https://github.com/City-of-Helsinki/django-oikotie.git@schema-validation
+git+https://github.com/City-of-Helsinki/django-oikotie.git@version_0_2_2
 django-helusers==0.13.0
 git+https://github.com/incuna/django-pgcrypto-fields@5b4b8eed3f9636ba3331f26e41a639fe4bee9247#egg=django-pgcrypto-fields
 django-simple-history
