Add development branch to CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: apartment-application-service CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, development]
   pull_request:
-    branches: [main]
+    branches: [main, development]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
