--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,6 +196,10 @@ jobs:
         run: |
           ./manage.py migrate
 
+      - name: Make messages
+        run: |
+          ./manage.py makemessages --all
+
       - name: Run tests
         run: |
           pytest -ra -vvv --doctest-modules --cov=.
