--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ env:
   # poppler-utils package contains the pdftotext-program that is used in some tests
   # newer versions of the program parse PDF's differently causing the tests to fail
   POPPLER_UTILS_VERSION: '22.02.0-2ubuntu0.7'
+  GETTEXT_VERSION: '0.21-4ubuntu4'
   PUBLIC_PGP_KEY: |
     -----BEGIN PGP PUBLIC KEY BLOCK-----
 
@@ -169,6 +170,9 @@ jobs:
 
       - name: Install poppler-utils for pdftotext  # used in tests
         run: sudo apt-get install poppler-utils=${{env.POPPLER_UTILS_VERSION}}
+
+      - name: Install gettext to make Django translation files # for tests
+        run: sudo apt-get install gettext=${{env.GETTEXT_VERSION}}
 
       - name: Install dependencies
         run: |
