add `manage.py compilemessages` call to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,6 +204,11 @@ jobs:
         run: |
           ./manage.py makemessages --all
 
+      - name: Compile messages
+        run: |
+          ./manage.py compilemessages
+
+
       - name: Run tests
         run: |
           pytest -ra -vvv --doctest-modules --cov=.
