--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ max-complexity = 10
 per-file-ignores =
     application_form/tests/test_pdf_haso.py:E501
     application_form/tests/test_pdf_hitas.py:E501
+    application_form/tests/test_application_api.py:F811
+    application_form/tests/test_sales_application_api.py:F811
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = apartment_application_service.tests.settings
